@@ -255,6 +255,8 @@ protected:
 	virtual bool VirtualToPhysical(uint64_t vaddr, uint64_t& paddr,
 	    bool& writable);
 
+	virtual void ShowRegisters(GXemul* gxemul, const vector<string>& arguments) const;
+
 private:
 	void ExecuteInstruction(uint32_t iword);
 
